--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq06l5RUVfib62IYRQacLc-KAy0XIWAVs"></script>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container mt-3 mb-3"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
